--- a/challenge-amigo-secreto/style.css
+++ b/challenge-amigo-secreto/style.css
@@ -174,3 +174,32 @@ ul {
 .button-draw:hover {
     background-color: var(--color-button-hover);
 }
+
+.popup {
+    display: none; /* Escondido por padrão */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border: 2px solid var(--color-primary);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    z-index: 1000; /* Sobrepõe outros elementos */
+    text-align: center;
+}
+
+.popup button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: var(--color-button);
+    color: var(--color-white);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.popup button:hover {
+    background-color: var(--color-button-hover);
+}
