--- a/challenge-amigo-secreto/style.css
+++ b/challenge-amigo-secreto/style.css
@@ -190,6 +190,21 @@ ul {
     text-align: center;
 }
 
+.popup {
+    display: none; /* Escondido por padrão */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border: 2px solid var(--color-primary);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    z-index: 1000; /* Sobrepõe outros elementos */
+    text-align: center;
+}
+
 .popup button {
     margin-top: 10px;
     padding: 10px 20px;
