Atualizar o style.css
.

--- a/challenge-amigo-secreto/style.css
+++ b/challenge-amigo-secreto/style.css
@@ -175,6 +175,7 @@ ul {
     background-color: var(--color-button-hover);
 }
 
+/* Popup */
 .popup {
     display: none; /* Escondido por padrão */
     position: fixed;
